Closed
Bug 1656867
Opened 5 years ago
Closed 5 years ago
Crash in [@ mozilla::layers::TexTypeForWebgl]
Categories
(Core :: Graphics: Layers, defect, P1)
Core
Graphics: Layers
Tracking
()
RESOLVED
FIXED
82 Branch
Tracking | Status | |
---|---|---|
firefox-esr68 | --- | unaffected |
firefox-esr78 | --- | unaffected |
firefox79 | --- | unaffected |
firefox80 | --- | unaffected |
firefox81 | + | fixed |
firefox82 | --- | fixed |
People
(Reporter: gsvelto, Assigned: jgilbert)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
47 bytes,
text/x-phabricator-request
|
jcristau
:
approval-mozilla-beta+
|
Details | Review |
This bug is for crash report bp-8c24b1bb-17f4-4409-bc92-11d230200802.
Top 10 frames of crashing thread:
0 XUL mozilla::layers::TexTypeForWebgl gfx/layers/CanvasRenderer.cpp:89
1 XUL mozilla::ClientWebGLContext::OnBeforePaintTransaction dom/canvas/ClientWebGLContext.cpp:328
2 XUL mozilla::layers::BasicCanvasLayer::Paint gfx/layers/basic/BasicCanvasLayer.cpp:36
3 XUL mozilla::layers::BasicLayerManager::PaintSelfOrChildren gfx/layers/basic/BasicLayerManager.cpp:703
4 XUL mozilla::layers::BasicLayerManager::PaintLayer gfx/layers/basic/BasicLayerManager.cpp:870
5 XUL mozilla::layers::BasicLayerManager::EndTransactionInternal gfx/layers/basic/BasicLayerManager.cpp:609
6 XUL mozilla::FrameLayerBuilder::PaintItems layout/painting/FrameLayerBuilder.cpp:7071
7 XUL mozilla::FrameLayerBuilder::DrawPaintedLayer layout/painting/FrameLayerBuilder.cpp:7251
8 XUL mozilla::layers::BasicPaintedLayer::PaintBuffer gfx/layers/basic/BasicPaintedLayer.h:103
9 XUL mozilla::layers::BasicPaintedLayer::Validate gfx/layers/basic/BasicPaintedLayer.cpp:179
This started in buildid 20200728213249, the raw crash reason is MOZ_CRASH(Unexpected LayersBackend::LAYERS_NONE)
.
Updated•5 years ago
|
status-firefox81:
--- → affected
Flags: needinfo?(jgilbert)
![]() |
||
Comment 1•5 years ago
|
||
This seems like it could be an easy fix. Marking as S2 for being a crasher until we know more from Jeff.
Severity: -- → S2
Priority: -- → P2
![]() |
Assignee | |
Updated•5 years ago
|
Assignee: nobody → jgilbert
Flags: needinfo?(jgilbert)
Priority: P2 → P1
Comment 2•5 years ago
|
||
This is currently a Nightly topcrash and will be on Beta next week. Jeff, can you please prioritize a fix for this bug?
status-firefox79:
--- → unaffected
status-firefox80:
--- → unaffected
status-firefox-esr68:
--- → unaffected
status-firefox-esr78:
--- → unaffected
tracking-firefox81:
--- → +
Flags: needinfo?(jgilbert)
![]() |
Assignee | |
Comment 4•5 years ago
|
||
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ddcc5a21bc86
Treat LAYERS_NONE like _BASIC. r=lsalzman
![]() |
||
Comment 6•5 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
Comment 7•5 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Flags: needinfo?(jgilbert)
![]() |
Assignee | |
Comment 8•5 years ago
|
||
Comment on attachment 9171299 [details]
Bug 1656867 - Treat LAYERS_NONE like _BASIC.
Beta/Release Uplift Approval Request
- User impact if declined: Rare MOZ_CRASH in some cases.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Low risk change to handle the case instead of MOZ_CRASHing.
- String changes made/needed: none
Flags: needinfo?(jgilbert)
Attachment #9171299 -
Flags: approval-mozilla-beta?
Comment 9•5 years ago
|
||
Comment on attachment 9171299 [details]
Bug 1656867 - Treat LAYERS_NONE like _BASIC.
crash fix, approved for 81.0b3
Attachment #9171299 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 10•5 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•