Bug 1656867 - Treat LAYERS_NONE like _BASIC. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D87814